force-app/main/default/objects/Metadata_Diff__c/Metadata_Diff__c.object-meta.xml
<CustomObject>
    <label>Metadata Diff</label>
    <pluralLabel>Metadata Diffs</pluralLabel>
    <nameField>
        <label>Metadata Diff Name</label>
        <type>AutoNumber</type>
        <displayFormat>MD-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>