force-app/main/default/objects/Metadata_Diff__c/fields/Before_Value__c.field-meta.xml
<CustomField><fullName>Before_Value__c</fullName><label>Before Value</label><length>32768</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>