force-app/main/default/objects/Metadata_Diff__c/fields/Current_Snapshot__c.field-meta.xml
<CustomField><fullName>Current_Snapshot__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Current Snapshot</label><referenceTo>Metadata_Component_Snapshot__c</referenceTo><relationshipLabel>Current Snapshot Diffs</relationshipLabel><relationshipName>Current_Snapshot_Diffs</relationshipName><type>Lookup</type></CustomField>