force-app/main/default/objects/Metadata_Diff__c/fields/Diff_Summary__c.field-meta.xml
<CustomField><fullName>Diff_Summary__c</fullName><label>Diff Summary</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>