force-app/main/default/objects/Metadata_Diff__c/fields/Diff_Type__c.field-meta.xml
<CustomField><fullName>Diff_Type__c</fullName><label>Diff Type</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Added</fullName><default>false</default><label>Added</label></value><value><fullName>Modified</fullName><default>true</default><label>Modified</label></value><value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value><value><fullName>Permission Changed</fullName><default>false</default><label>Permission Changed</label></value><value><fullName>Activated</fullName><default>false</default><label>Activated</label></value><value><fullName>Deactivated</fullName><default>false</default><label>Deactivated</label></value><value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value></valueSetDefinition></valueSet></CustomField>