force-app/main/default/objects/Metadata_Diff__c/fields/Is_Rollback_Possible__c.field-meta.xml
<CustomField><fullName>Is_Rollback_Possible__c</fullName><defaultValue>false</defaultValue><label>Is Rollback Possible</label><type>Checkbox</type></CustomField>