force-app/main/default/objects/Metadata_Diff__c/fields/Metadata_Audit_Event__c.field-meta.xml
<CustomField><fullName>Metadata_Audit_Event__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Metadata Audit Event</label><referenceTo>Metadata_Audit_Event__c</referenceTo><relationshipLabel>Metadata Diffs</relationshipLabel><relationshipName>Metadata_Diffs</relationshipName><type>Lookup</type></CustomField>