force-app/main/default/objects/Metadata_Diff__c/fields/Previous_Snapshot__c.field-meta.xml
<CustomField><fullName>Previous_Snapshot__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Previous Snapshot</label><referenceTo>Metadata_Component_Snapshot__c</referenceTo><relationshipLabel>Previous Snapshot Diffs</relationshipLabel><relationshipName>Previous_Snapshot_Diffs</relationshipName><type>Lookup</type></CustomField>