force-app/main/default/objects/Metadata_Diff__c/fields/Rollback_Notes__c.field-meta.xml
<CustomField><fullName>Rollback_Notes__c</fullName><label>Rollback Notes</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>